--- a/css/main.css
+++ b/css/main.css
@@ -146,30 +146,32 @@ pre {
  * Site header
  */
 .site-header {
-  /*border-top: 5px solid $grey-color-dark;*/
-  border-bottom: 1px solid #e8e8e8;
-  background-color: #787878;
-  min-height: 56px;
+  border-top: 10px solid #FFFFFF;
   position: relative; }
 
 .site-title {
-  font-size: 26px;
-  line-height: 56px;
+  font-size: 0px;
+  line-height: 0px;
   letter-spacing: -1px;
-  margin-bottom: 0;
-  float: left;
-  background-color: #787878; }
-  .site-title, .site-title:visited {
-    color: #FFF; }
+    /*
+    margin-bottom: 0;
+    float: left;
+	background-color: #787878;
+
+    &,
+    &:visited {
+        color: #FFF;
+    }
+    */ }
 
 .site-nav {
   float: left;
   line-height: 56px;
-  background-color: #787878; }
+  background-color: #FFFF; }
   .site-nav .menu-icon {
     display: none; }
   .site-nav .page-link {
-    color: #FFF;
+    color: #111;
     line-height: 1.5;
     margin-left: 20px; }
   @media screen and (max-width: 600px) {
