--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,6 @@ body{
   color: #fff;
   text-decoration: none;
   font-size: 16px;
-  text-transform: uppercase;
 }
 #nav .current a{
   color: #05131c;
@@ -112,6 +111,10 @@ body{
 .box ul{
   margin-left: 15px;
   text-align: left;
+}
+.tlink {
+  text-decoration: none;
+  color: #05131c;
 }
 .showcase{
   order: 1;
