--- a/css/style.css
+++ b/css/style.css
@@ -108,7 +108,19 @@ body{
 .box img{
   width: 100%;
   max-width: 400px;
+  
 }
+.box-redundancy{
+  flex-basis: 45%;
+  text-align: left;
+  padding: 10px;
+  color: #05131c;
+  font-size: 18px;  
+}
+.box-redundancy img{
+  width: 100%;
+}
+
 .box ul{
   margin-left: 15px;
   text-align: left;
