--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ body{
   background: #75b9e6;
   color: #fff;
   height: 75px;
-  min-width: 600px;
+  /* min-width: 600px; */
 }
 @media(min-width: 975px) {
   #main-header{
@@ -75,19 +75,102 @@ body{
   color: #fff;
 }
 /* Navigation */
-#nav li{
+.nav li{
   display: inline;
-  padding: 0 20px 0 20px;
+  padding: 0 15px;
 }
-#nav a{
+.nav a{
   color: #fff;
   text-decoration: none;
   font-size: 16px;
 }
-#nav .current a{
+.nav .current a{
   color: #05131c;
   font-weight: bold;
 }
+.nav a:hover{
+  color:steelblue;
+  font-weight: bold;
+}
+.toggle-button{
+  position: absolute;
+  top: 21px;
+  left: 10px;
+  /* right: 1rem; */
+  display: none;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 30px;
+  height: 21px;
+}
+
+.toggle-button .bar{
+  height: 3px;
+  width: 100%;
+  background: white;
+  border-radius: 10px;
+}
+
+@media (max-width: 610px) {
+  #main-header{
+    text-align: center;
+    padding-top: 10px;
+    background: #75b9e6;
+    color: #fff;
+    height: 65px;
+  }
+
+  .toggle-button {
+    display: flex;
+  }
+  
+  .nav {
+    display: none;
+    width: 100%;
+  }
+
+  .nav li{
+    display: flex;
+    flex-direction: column;
+    width: 150px;
+    align-items: stretch;
+    text-align: left;
+  }
+
+  .nav a{
+    padding: 5px 10px;
+    color: #fff;
+    background: #75b9e6;
+    text-decoration: none;
+    font-size: 16px;
+  }
+  .nav .current a{
+    color: #05131c;
+    font-weight: bold;
+  }
+  .nav a:hover{
+    color:steelblue;
+    font-weight: bold;
+  }
+
+  /* .nav ul {
+    width: 100%;
+    flex-direction: column;
+  }
+
+  .nav ul li {
+    text-align: center;
+  }
+
+  .nav ul li a {
+    padding: .5rem 1rem;
+  } */
+
+  .nav.active {
+    display: flex;
+  }
+}
+
 /* Spacing because of fixed position header */
 #space{
   margin: 75px;
@@ -103,27 +186,26 @@ body{
   text-align: center;
   padding: 10px;
   color: #05131c;
-  font-size: 18px;  
+  font-size: 18px;
 }
 .box img{
   width: 100%;
   max-width: 400px;
-  
+
+}
+.box ul{
+  margin-left: 15px;
+  text-align: left;
 }
 .box-redundancy{
   flex-basis: 45%;
   text-align: center;
   padding: 10px;
   color: #05131c;
-  font-size: 18px;  
+  font-size: 18px;
 }
 .box-redundancy img{
   width: 75%;
-}
-
-.box ul{
-  margin-left: 15px;
-  text-align: left;
 }
 .tlink {
   text-decoration: none;
@@ -137,16 +219,32 @@ body{
   background-size: cover;
   background-repeat: no-repeat;
 }
+.gray-showcase{
+  margin-top: 20px;
+  height: 70px;
+  background-image: url(../img/gray_stars.jpg);
+  background-position: right;
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+}
 #showcase-text{
   height: 200px;
   display: table-cell;
-  vertical-align: middle; 
+  vertical-align: middle;
 }
 #showcase-text h1{
   width: 100%;
   font: bold italic 30px Arial, Helvetica, sans-serif;
   line-height: 1.5;
   color: #fff;
+}
+.showcase-img{
+  margin: auto;
+  display:flex;
+  justify-content: space-around;
+  flex-basis: 70px;
+  height: auto;
 }
 @media(min-width: 975px) {
   #showcase-text h1{
@@ -205,7 +303,7 @@ body{
   text-align: center;
   padding: 10px;
   color: #05131c;
-  font-size: 18px;  
+  font-size: 18px;
 }
 .team-box img{
   width: 100%;
@@ -220,7 +318,7 @@ body{
 }
 .team-box h1 img{
   width: 100%;
-  max-width: 30px;  
+  max-width: 30px;
 }
 .t1{
   order: 17;
