--- a/css/style.css
+++ b/css/style.css
@@ -79,96 +79,89 @@ body{
   display: inline;
   padding: 0 15px;
 }
-.nav a{
+.nav-link{
   color: #fff;
   text-decoration: none;
   font-size: 16px;
 }
-.nav .current a{
+.nav .current .nav-link{
   color: #05131c;
   font-weight: bold;
 }
-.nav a:hover{
+.nav-link:hover{
   color:steelblue;
   font-weight: bold;
 }
-.toggle-button{
-  position: absolute;
-  top: 21px;
-  left: 10px;
-  /* right: 1rem; */
+.nav-button{
   display: none;
-  flex-direction: column;
-  justify-content: space-between;
-  width: 30px;
-  height: 21px;
 }
-
-.toggle-button .bar{
-  height: 3px;
-  width: 100%;
-  background: white;
-  border-radius: 10px;
+.nav-button-content{
+  display: none;
 }
 
 @media (max-width: 610px) {
   #main-header{
     text-align: center;
     padding-top: 10px;
+    padding-left: 0px;
     background: #75b9e6;
     color: #fff;
     height: 65px;
   }
-
-  .toggle-button {
+  .nav-button {
     display: flex;
+    position: absolute;
+    top: 16px;
+    left: 10px;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 38px;
+    height: auto;
   }
-  
-  .nav {
-    display: none;
-    width: 100%;
-  }
-
-  .nav li{
+  .nav{
     display: flex;
     flex-direction: column;
-    width: 150px;
+    width: 160px;
+    padding-bottom: 10px;
     align-items: stretch;
     text-align: left;
-  }
-
-  .nav a{
-    padding: 5px 10px;
-    color: #fff;
     background: #75b9e6;
+    border-bottom-right-radius: 7px;
+    border-bottom-left-radius: 7px;
+    margin-left: 15px;
+    opacity: 0;
+    pointer-events: none;
+    transform: translateY(-10px);
+    transition: all 0.4s ease;
+  }
+  .nav-link{
+    display: flex;
+    color: #fff;
     text-decoration: none;
     font-size: 16px;
+    padding-left: 20px;
+    height: 5px;
   }
-  .nav .current a{
+  .nav .current .nav-link{
     color: #05131c;
     font-weight: bold;
   }
-  .nav a:hover{
+  .nav-link:hover{
     color:steelblue;
     font-weight: bold;
   }
-
-  /* .nav ul {
-    width: 100%;
-    flex-direction: column;
+  .nav-button:hover{
+    background:white;
+    border-radius: 3px;
   }
-
-  .nav ul li {
-    text-align: center;
+  .nav-button:focus ~ .nav{
+    opacity: 1;
+    pointer-events: auto;
+    transform: translateY(10px);
   }
-
-  .nav ul li a {
-    padding: .5rem 1rem;
-  } */
-
-  .nav.active {
-    display: flex;
-  }
+  .nav:active {
+    pointer-events: auto;
+ }
 }
 
 /* Spacing because of fixed position header */
