--- a/css/style.css
+++ b/css/style.css
@@ -108,14 +108,17 @@ body{
     color: #fff;
     height: 65px;
   }
+  #branding{
+    margin-left: 27px;
+  }
   .nav-button {
     display: flex;
     position: absolute;
     top: 16px;
-    left: 10px;
+    left: 5px;
     flex-direction: column;
     justify-content: space-between;
-    width: 38px;
+    width: 35px;
     height: auto;
   }
   .nav{
@@ -128,7 +131,7 @@ body{
     background: #75b9e6;
     border-bottom-right-radius: 7px;
     border-bottom-left-radius: 7px;
-    margin-left: 15px;
+    margin-left: 10px;
     opacity: 0;
     pointer-events: none;
     transform: translateY(-10px);
