--- a/css/style.css
+++ b/css/style.css
@@ -232,6 +232,7 @@ body{
   background-repeat: no-repeat;
   display: flex;
 }
+
 #showcase-text{
   height: 200px;
   display: table-cell;
@@ -249,6 +250,35 @@ body{
   justify-content: space-around;
   flex-basis: 70px;
   height: auto;
+}
+
+.store-banner{
+  display: flex;
+  height: 100px;
+  margin-top: 100px;
+  background-color: #75b9e6;
+  justify-content: center;
+  align-items:center;
+}
+
+.store {
+  margin-top: 80px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+  align-items:flex-end;
+}
+
+.product{
+  margin-left: 30px;
+  margin-right: 30px;
+  margin-bottom: 60px;
+  /* margin: 15px; */
+  /* outline-style: solid;
+  outline-color:rgba(0, 0, 0); */
+  /* background-color: rgb(209, 209, 209); */
+  /* height: 400px; */
 }
 @media(min-width: 975px) {
   #showcase-text h1{
