--- a/css/style.css
+++ b/css/style.css
@@ -1,418 +1,273 @@
-/* Global padding and margin reset */
-*{
-  margin: 0;
+
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&family=Open+Sans:wght@300&display=swap');
+
+* {
+  box-sizing: border-box;
   padding: 0;
+  margin: 0;
 }
-/* Only flex on desktop */
-@media(min-width: 975px) {
-  #main-header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-  #boxes{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-  }
-  #team-boxes{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: flex-start;
-  }
-  #main-footer{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-  }
+
+body {
+  font-family: 'Open Sans', sans-serif;
+  line-height: 1.5;
+  display: grid;
+  grid-template-rows: 50px 1fr 25px;
+  gap: 20px;
+  min-height: 100vh;
 }
-/*** Globals ***/
-/* Highlight text */
+
+a {
+  text-decoration: none;
+}
+
+.container {
+  max-width: 1140px;
+  margin: 0 auto;
+  overflow: auto;
+  padding: 0 20px;
+}
+
+.flex {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 20px;
+}
+
+.flex-column {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+.head {
+  font-family: 'IBM Plex Sans', sans-serif;
+  text-align: center;
+}
+
+.desc {
+  text-align: center;
+}
+
+/* Header */
+
+.logo {
+  font-family: 'IBM Plex Sans', sans-serif;
+  color: #fff;
+  padding-right: 50px;
+}
+
 .highlight{
   color: #05131c;
-  font-weight: bold;
-}
-/* Container class to bring in page margins */
-.container{
-  width: 90%;
-  margin: auto;
-  overflow: hidden;
-}
-/* Body */
-body{
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 15px;
-  line-height: 1.5;
-  background-color: #fff;
-}
-/* Header */
-#fixed-header{
-  position: fixed;
-  top: 0;
-  left: 0;
-  margin: auto;
-  width: 100%;
-}
-#main-header{
-  text-align: center;
-  background: #75b9e6;
-  color: #fff;
-  height: 75px;
-  /* min-width: 600px; */
-}
-@media(min-width: 975px) {
-  #main-header{
-    height: 50px;
-  }
-}
-#branding{
-  min-width: 350px;
-}
-#branding a{
-  text-decoration: none;
-  color: #fff;
-}
-/* Navigation */
-.nav li{
-  display: inline;
-  padding: 0 15px;
-}
-.nav-link{
-  color: #fff;
-  text-decoration: none;
-  font-size: 16px;
-}
-.nav .current .nav-link{
-  color: #05131c;
-  font-weight: bold;
-}
-.nav-link:hover{
-  color:steelblue;
-  font-weight: bold;
-}
- .nav-small{
-  display: none;
-}
-@media (max-width: 620px) {
-  #main-header{
-    text-align: center;
-    padding-top: 0px;
-    padding-left: 0px;
-    background: #75b9e6;
-    color: #fff;
-    height: 75px;
-  }
-  #branding{
-    margin-left: .1em;
-    padding-top: 4px;
-  }
-   .nav ul{
-    display:none;
-  }
-
-  .nav-small{
-    display: block;
-
-  }
-  .nav-small li{
-    display: inline;
-    padding: 0px 10px;
-  }
-  .nav-small-link{
-    color: #fff;
-    text-decoration: none;
-    font-size: 15px;
-  }
-  .nav-small .current .nav-small-link{
-    color: #05131c;
-    font-weight: bold;
-  }
-  .nav-small-link:hover{
-    color:steelblue;
-    font-weight: bold;
-  }
-}
-@media (max-width: 422px) {
-  #main-header{
-    text-align: center;
-    padding-top: 0px;
-    padding-left: 0px;
-    background: #75b9e6;
-    color: #fff;
-    height: 75px;
-  }
-  #branding{
-    margin-left: .1em;
-    padding-top: 4px;
-    font-size: 12px;
-  }
-   .nav ul{
-    display:none;
-  }
-
-  .nav-small{
-    display: block;
-
-  }
-  .nav-small li{
-    display: inline;
-    padding: 0px 5px;
-  }
-  .nav-small-link{
-    color: #fff;
-    text-decoration: none;
-    font-size: 12px;
-  }
-  .nav-small .current .nav-small-link{
-    color: #05131c;
-    font-weight: bold;
-  }
-  .nav-small-link:hover{
-    color:steelblue;
-    font-weight: bold;
-  }
+  font-weight: bolder;
 }
 
-/* Spacing because of fixed position header */
-#space{
-  margin: 75px;
-}
-@media(min-width: 975px) {
-  #space{
-    margin: 50px;
-  }
-}
-/* Content boxes */
-.box{
-  flex-basis: 45%;
-  text-align: center;
-  padding: 10px;
-  color: #05131c;
-  font-size: 18px;
-}
-.box img{
-  width: 100%;
-  max-width: 400px;
-
-}
-.box ul{
-  margin-left: 15px;
-  text-align: left;
-}
-.box-redundancy{
-  flex-basis: 45%;
-  text-align: center;
-  padding: 10px;
-  color: #05131c;
-  font-size: 18px;
-}
-.box-redundancy img{
-  width: 75%;
-}
-.tlink {
-  text-decoration: none;
-  color: #05131c;
-}
-.showcase{
-  order: 1;
-  flex-basis: 100%;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)), url(../img/cover.png);
-  background-position: right;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-.logo-showcase{
-  margin-top: 20px;
-  height: 70px;
-  background:none;
-  background-position: right;
-  background-size: cover;
-  background-repeat: no-repeat;
-  display: flex;
+.logo-light {
+  font-weight: lighter;
 }
 
-#showcase-text{
-  height: 200px;
-  display: table-cell;
-  vertical-align: middle;
+nav {
+  font-family: 'IBM Plex Sans', sans-serif;
 }
-#showcase-text h1{
-  width: 100%;
-  font: bold italic 30px Arial, Helvetica, sans-serif;
-  line-height: 1.5;
-  color: #fff;
-}
-.showcase-img{
-  margin: auto;
-  display:flex;
-  justify-content: space-around;
-  flex-basis: 70px;
-  height: auto;
-}
-.store-banner{
-  display: flex;
-  height: 100px;
-  margin-top: 100px;
+
+header, footer {
   background-color: #75b9e6;
-  justify-content: center;
-  align-items:center;
-}
-.store {
-  margin-top: 80px;
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  justify-content: center;
-  align-items:flex-end;
-}
-.store p{
-  margin: 15px;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 17px;
-  line-height: 1.5;
-  background-color: #fff;
-  text-align: center;
-}
-.product{
-  margin-left: 30px;
-  margin-right: 30px;
-  margin-bottom: 60px;
-  /* margin: 15px; */
-  /* outline-style: solid;
-  outline-color:rgba(0, 0, 0); */
-  /* background-color: rgb(209, 209, 209); */
-  /* height: 400px; */
-}
-@media(min-width: 975px) {
-  #showcase-text h1{
-    width: 50%;
-  }
-}
-@media(max-width: 30em){
-  .logo-showcase{
-    display:none;
-  } 
 }
 
-.box1{
-  order: 1;
+nav ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style-type: none;
 }
-.box2{
-  order: 2;
+
+nav a {
+  font-size: larger;
+  font-weight: bolder;
+  color: #fff;
+  padding: 0 10px;
 }
-.box3{
-  order: 5;
-}
-.box4{
-  order: 4;
-}
-.box5{
-  order: 6;
-}
-.box6{
-  order: 7;
-}
-.box7{
-  order: 9;
-}
-.box8{
-  order: 8;
-}
-.box9{
-  order: 10;
-}
-.box10{
-  order: 11;
-}
-.box11{
-  order: 13;
-}
-.box12{
-  order: 12;
-}
-.box13{
-  order: 14;
-}
-.box14{
-  order: 15;
-}
-.box15{
-  order: 16;
-  flex-basis: 100%;
-}
-/* Team Boxes */
-.team-box{
-  flex-basis: 45%;
-  text-align: center;
-  padding: 10px;
+
+.current-page {
   color: #05131c;
-  font-size: 18px;
 }
-.team-box img{
-  width: 100%;
-  max-width: 400px;
+
+.page-link:hover {
+  color: #05131c;
 }
-.team-box ul{
-  margin-left: 15px;
+
+/* Footer */
+
+footer {
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-weight: bolder;
+  color: #fff;
+}
+
+/* Hero */
+
+.hero {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 15px;
+}
+
+.eaa {
+  height: 125px;
+  width: auto;
+}
+
+/* Product cards */
+
+.card-holder {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.card {
+  width: 250px;
+  height: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  color: #000;
+}
+
+.card-img {
+  width: 200px;
+  height: auto;
+  padding-bottom: 5px;
+}
+
+.card-header {
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-weight: bolder;
+  font-size: 16px;
+  text-align: center;
+}
+
+.card-lead {
+  font-size: 15px;
+  text-align: center;
+}
+
+.card:hover {
+  color: #75b9e6;
+}
+
+/* Services */
+
+.services-holder {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 20px;
+}
+
+.services-holder-reverse {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 20px;
+}
+
+.services-img {
+  width: 350px;
+  height: auto;
+  padding-bottom: 5px;
+}
+
+.services-desc-left {
   text-align: left;
 }
-.team-box a{
-  color: #05131c;
+
+.services-desc-right {
+  text-align: right;
 }
-.team-box h1 img{
-  width: 100%;
-  max-width: 30px;
+
+.services-ul {
+  margin-left: 40px;
 }
-.t1{
-  order: 17;
-  flex-basis: 100%;
+
+.services-ul-l2 {
+  margin-left: 45px;
 }
-.t2{
-  order: 18;
-  flex-basis: 45%;
+
+.services-ul-l3 {
+  margin-left: 50px;
 }
-.t2 img{
-  max-height: 250px;
-  width: auto;
+
+.link {
+  color: steelblue;
+  font-weight: bolder;
 }
-.t3{
-  order: 19;
-  flex-basis: 45%;
+
+/* About */
+
+.team-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-.t3 img{
-  max-height: 250px;
-  width: auto;
+
+.team-img {
+  width: 250px;
+  padding-bottom: 5px;
 }
-.t4{
-  order: 20;
-  flex-basis: 45%;
+
+.team-desc {
+  text-align: center;
 }
-.t4 img{
-  max-height: 250px;
-  width: auto;
-}
-/* Footer */
-#fixed-footer{
-  position: relative;
-  bottom: 0;
-  left: 0;
-  margin: auto;
-  width: 100%;
-}
-@media(min-width: 975px) {
-  #fixed-footer{
-    position: fixed;
+
+@media(max-width: 900px) {
+  .services-holder {
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+
+  .services-holder-reverse {
+    justify-content: center;
+    flex-wrap: wrap-reverse;
+  }
+
+  .services-desc-left {
+    text-align: center;
+  }
+  
+  .services-desc-right {
+    text-align: center;
+  }
+
+  .disappear {
+    display: none;
   }
 }
-#main-footer{
-  text-align: center;
-  background: #75b9e6;
-  color: #fff;
-  font-size: 16px;
-}
-#main-footer a{
-  color: #fff;
-  font-size: 16px;
+
+@media(max-width: 675px) {
+  body {
+    grid-template-rows: 80px 1fr 25px;
+  }
+
+  header .flex {
+    flex-direction: column;
+    gap: 5px;
+  }
+
+  .logo {
+    font-size: 24px;
+    padding-right: 0px;
+  }
+
+  footer {
+    display: none;
+  }
 }
