--- a/css/style.css
+++ b/css/style.css
@@ -228,6 +228,29 @@ footer {
   text-align: center;
 }
 
+#eaa {
+  color: steelblue;
+  font-weight: bolder;
+  font-style: oblique;
+  font-size: larger;
+}
+
+#center-me {
+  text-align: center;
+}
+
+#onflight-price {
+  font-weight: bolder;
+  text-align: center;
+}
+
+#onflight-button {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
 @media(max-width: 900px) {
   .services-holder {
     justify-content: center;
@@ -252,7 +275,7 @@ footer {
   }
 }
 
-@media(max-width: 675px) {
+@media(max-width: 825px) {
   body {
     grid-template-rows: 80px 1fr 25px;
   }
