Added info about OnFlight integrations and added a buy button

--- a/css/style.css
+++ b/css/style.css
@@ -251,6 +251,12 @@ footer {
   align-items: center;
 }
 
+.onflight-img {
+  width: 75px;
+  height: auto;
+  padding-bottom: 5px;
+}
+
 @media(max-width: 900px) {
   .services-holder {
     justify-content: center;
